# sec-downloader

./: .gitignore  README.md  main.py  pyproject.toml
src/sec_api/: cik.py  company.py  constants.py  downloader_base.py  downloader_local.py  test_cik.py  typings.py  utils.py
src/sec_api/downloader/: base.py  local_cache.py
