[project]
name = "sec-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "pydantic>=2.11.10",
    "pyrate-limiter>=3.9.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.7",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
